# MuJoCo-G1

./: .gitignore  .gitmodules  CMakeLists.txt  PORTING_MACOS.md  README.md  null  robot_control_process.md
.cache/clangd/index/: array_safety.h.BC8E8B911E1467D5.idx  controller.cpp.B549D2F83751C1B3.idx  controller.h.F706CC4DE40B934D.idx  custommath.h.9A80A0FCBCE58FAB.idx  glfw_adapter.cc.2F4FC9B3FD0E492E.idx  glfw_adapter.h.60C0131D5BAC6321.idx  glfw_corevideo.h.5438280BA35F7AE4.idx  glfw_corevideo.mm.8A986C34705AB0EF.idx  glfw_dispatch.cc.4DB831BB621A6C8F.idx  glfw_dispatch.h.0B7EFD40FF4DEAF5.idx  macos_gui.mm.5E149CF98475CAF9.idx  main.cc.0E29A24DC6D66EE7.idx  mapping.h.F59F18E9ABB30718.idx  mjdata.h.73117A2AAF37889E.idx  mjexport.h.BC1E668ABD36E979.idx  mjmacro.h.32FC55807D9656CC.idx  mjmodel.h.9F03ABE9809E413C.idx  mjplugin.h.BE4D859CD329601D.idx  mjrender.h.957951AAFCEECDA9.idx  mjsan.h.1EA439F678928945.idx  mjspec.h.C444344BB1AB8DDE.idx  mjthread.h.B9190072991F0C61.idx  mjtnum.h.8C8D19954F592B6D.idx  mjui.h.A3E6C057E57AB4EC.idx  mjvisualize.h.B9511FA6998B65AE.idx  mjxmacro.h.03371E78025111C4.idx  mujoco.h.2DD7CC4162B8B534.idx  observation.cpp.A96BD89D1B185201.idx  observation.h.C443BDB293015810.idx  onnxruntime_c_api.h.5FABC084CFB67C74.idx  onnxruntime_cxx_api.h.99DC357DC0E81ABE.idx  onnxruntime_cxx_inline.h.F96CF60573068FD3.idx  onnxruntime_ep_c_api.h.C836BD1A585822BD.idx  onnxruntime_float16.h.664D8319722CD77B.idx  platform_ui_adapter.cc.E4A33AB1EBA8FAFB.idx  platform_ui_adapter.h.758A5679768608A2.idx  policy.cpp.3FE7F26F454CD9DA.idx  policy.h.61A9A968F34E61E1.idx  robotmodel.cpp.7C81F7C019E9127F.idx  robotmodel.h.3FB42A66D1BE1873.idx  (+4 more)
JointControl/: JointControl_최신.cpp
JointControl/Bak(ver.260206)/CRobot/: Axis.cpp  Axis.h  AxisELMO.cpp  AxisELMO.h  ConfigRobot.cpp  ConfigRobot.h  ExtInterface.cpp  Gamepad.cpp  Gamepad.h  Hand.cpp  Hand.h  IMU.cpp  IMU.h  Robot.cpp  Robot.h
JointControl/Bak(ver.260206)/Config/: 1UserSurgeryRobot.cfg  ELMO.cfg  KAPEX (copy).cfg  KAPEX copy.cfg  KAPEX.cfg  KAPEX_all (copy).cfg  KAPEX_all_hand.cfg  KAPEX_ex_waist.cfg
JointControl/Bak(ver.260206)/include/: CommUtil.h  Humanoid.h  JointControl.h  MimicRLControl.h  RLControl.h  Robotics_func.h  StateDef.h  TimerDef.h  custommath.h  robotmodel.h  timer.h  trajectory.h
JointControl/Bak(ver.260206)/include/networks/: LSTM.h  LayerNorm.h  Linear.h  MLP.h  Networks.h  NormalizedMLP.h  Utils.h
JointControl/Bak(ver.260206)/include/wrist_parallel_mechanism/: parallel_mechanism.h
JointControl/Bak(ver.260206)/script/: 192.168.1-metadata.json  start_ethercat.service  start_nuc.service  starting (copy).sh  starting.sh
JointControl/Bak(ver.260206)/src/: Humanoid.cpp  MimicRLControl.cpp  RLControl.cpp  main.cpp  quadraticprogram.cpp  robotmodel.cpp  trajectory.cpp  ㅁ
JointControl/Bak(ver.260206)/src/networks/: LSTM.cpp  LayerNorm.cpp  Linear.cpp  MLP.cpp  Networks.cpp  NormalizedMLP.cpp  Utils.cpp
JointControl/Bak(ver.260206)/src/wrist_parallel_mechanism/: parallel_mechanism.cpp
include/: controller.h  custommath.h  mapping.h  observation.h  policy.h  robotmodel.h  trajectory.h
model/: scene_g1_29dof_wbt_plane.xml
mujoco-3.6.0/lib/: libmujoco.dylib
pyfile/: check_log.ipynb  kapex.py  mdp.py  observation.py
pyfile/exported/: policy.onnx  policy.onnx.data  policy.pt
pyfile/exported-416/: policy.onnx  policy.onnx.data  policy.pt
pyfile/exported-417/: policy.onnx
pyfile/fastsac/: locomotion.py  model.onnx
src/: main.cc
src/control/: CMakeLists.txt  controller.cpp
src/observation/: fastsac_obs.md  observation.cpp
src/planning/: CMakeLists.txt  trajectory.cpp
src/policy/: CMakeLists.txt  policy.cpp
src/robot/: CMakeLists.txt  robotmodel.cpp
